# advent-of-code-2020

py/: pyproject.toml
py/d1/: d1.py
