[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = ""
authors = ["Lakin Wecker <lakin.wecker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prospector = "^1.3.1"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
